force-app/main/default/objects/Behavioral_Health_Substance_Use__c/Behavioral_Health_Substance_Use__c.object-meta.xml
<CustomObject>
    <label>Behavioral Health/Substance Use</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Behavioral Health/Substance Use Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavioral Health/Substance Uses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>