force-app/main/default/objects/Behavioral_Health_Substance_Use__c/fields/Alcohol_Use__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Use__c</fullName>
    <label>Alcohol Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>