force-app/main/default/objects/Behavioral_Health_Substance_Use__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Behavioral Health/Substance Uses</relationshipLabel>
    <relationshipName>Behavioral_Health_Substance_Uses</relationshipName>
    <type>Lookup</type>
</CustomField>