force-app/main/default/objects/Behavioral_Health_Substance_Use__c/fields/Family_Siblings_Drug_or_Alcohol_Problem__c.field-meta.xml
<CustomField>
    <fullName>Family_Siblings_Drug_or_Alcohol_Problem__c</fullName>
    <inlineHelpText>Family/peer/Siblings Drug or Alcohol Problem</inlineHelpText>
    <label>Family/Siblings Drug or Alcohol Problem</label>
    <type>TextArea</type>
</CustomField>